syntax = "proto3";
package shared;

option go_package = "github.com/pokt-network/pocket/shared/codec";

// This structure is needed to test the codec itself
// If we did not have this structure, we'd need to `import` specific
// proto structures in order to test the `Marhsal` and `Unmarshal` functions
// See https://github.com/pokt-network/pocket/issues/231 for more details
message TestProtoStructure {
    int32 field1 = 1;
    string field2 = 2;
    bool field3 = 3;
}

message TestProtoStructure2 {
    int32 field1 = 1;
    string field2 = 2;
}
